--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
-  "name": "Workflowy Task Highlighter",
+  "name": "Workflowy Tag Highlighter",
   "version": "0.1",
 
-  "description": "Highlights all tasks due today",
+  "description": "Highlights all tags due today",
 
   "content_scripts": [
     {
