add jquery and add highlighting for previous days

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.workflowy.com/*"],
-      "js": ["workflowy.js"]
+      "js": ["jquery.min.js", "workflowy.js"]
     }
   ]
 
